# Cookiecutter-ape-rye-template

./: README.md  cookiecutter.json  demo.tape
ape-test/: README.md  ape-config.yaml  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.dist_name}}/: README.md  pyproject.toml
